# ALGORITIMO-IDENTIFICADOR-DE-SOLDA

./: .gitignore  README.md
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  QUICK_START.md  README_PT_BR.md
src/welding_system/: CMakeLists.txt  examples.py  package.xml
src/welding_system/config/: welding_params.yaml
src/welding_system/launch/: gazebo_welding.launch  welding_system.launch
src/welding_system/scripts/: image_publisher_node.py  movement_executor_node.py  welding_planner_node.py
src/welding_system/src/: joint_detector.py
src/welding_system/test/: test_joint_detector.py
